examples/canary.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-canary-1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-canary
        version: v1
    spec:
      containers:
      - name: hello-canary
        image: wardviaene/http-echo:latest
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-canary-2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-canary
        version: v2
    spec:
      containers:
      - name: hello-canary
        image: wardviaene/http-echo:latest
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-canary
  labels:
    app: hello-canary
spec:
  selector:
    app: hello-canary
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-canary
spec:
  hosts:
  - "hello-canary.example.com"
  gateways:
  - helloworld-gateway
  http:
  - route:
    - destination:
        host: "hello-canary.myproject.svc.cluster.local"
        subset: v1
      weight: 90
    - destination:
        host: "hello-canary.myproject.svc.cluster.local"
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-canary
spec:
  host: hello-canary.myproject.svc.cluster.local
  # uncomment to enable mutual TLS
  #trafficPolicy:
  #  tls:
  #    mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
