examples/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-istio
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-istio
    spec:
      containers:
      - name: hello-istio
        image: wardviaene/http-echo:latest
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-istio
  labels:
    app: hello-istio
spec:
  selector:
    app: hello-istio
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-istio
spec:
  hosts:
  - "hello-istio.example.com"
  gateways:
  - helloworld-gateway
  http:
  - route:
    - destination:
        host: hello-istio.myproject.svc.cluster.local
        port:
          number: 8080
